--- a/README
+++ b/README
@@ -1,3 +1,8 @@
 This is the Open Journal System (OJS) v. 2.3.4.
 This has been modified for a project concerning Ethical review processes.
-This website is under development and includes a lot of bugs to fix.
+This system is under development and includes a lot of bugs to fix.
+This version is the first attempt to a generic version. Some specific files to each version are therefore not present. A complete version of the system should consider having the following files (ignored by git):
+_At the root of the system: a config file "config.inc.php" based on the template file "config.TEMPLATE.inc.php" and configured according to your server
+_The cache subfolders (empty or not): '/cache/_db/', '/cache/t_cache/', '/cache/t_compile/' and '/cache/t_config/'
+_The banner, "banner.png", and the footer, "footer.png", png images of 990 * 105 pixels located in "/plugins/themes/hrp/images/"
+_An xml file containing the geographical areas of the country for each language you intend to use. Each of these files should be located in their respective locale directory: "/lib/pkp/locale/*/areasOfTheCountry.xml". PLease refer to "/classes/article/AreasOfTheCountryDAO.inc.php".
