--- a/lib/pkp/locale/en_US/areasOfTheCountry.xml
+++ b/lib/pkp/locale/en_US/areasOfTheCountry.xml
@@ -1,46 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
-    Document   : areasOfTheCountry.xml
+    Document   : divisionsOfPNG.xml
     Created on : February 8th 2013
     Author     : Edouard Lavaud
     Description:
-        For use in country where proposal is submitted.
-        
-        
-        !!!! Do not use "EXT" as code. This one refers to external countries.
+        For use in division where proposal is submitted.
 -->
 
-<countries>
-    <country code="ARR" name="Arkhangai"/>
-    <country code="BGD" name="Baganuur district (UB City)"/>
-    <country code="BGK" name="Bagakhangai district (UB City)"/>
-    <country code="BAO" name="Bayan-Ölgii"/>
-    <country code="BAK" name="Bayankhongor"/>
-    <country code="BAG" name="Bayangol district (UB City)"/>
-    <country code="BAZ" name="Bayanzurkh district (UB City)"/>
-    <country code="BUL" name="Bulgan"/>
-    <country code="CGD" name="Chingeltei district (UB City)"/>
-    <country code="DAU" name="Darkhan-Uul"/>
-    <country code="DOD" name="Dornod"/>
-    <country code="DOG" name="Dornogovi"/>
-    <country code="DUG" name="Dundgovi"/>
-    <country code="GOA" name="Govi-Altai"/>
-    <country code="GOS" name="Govisümber"/>
-    <country code="KHU" name="Khan-Uul district (UB City)"/>
-    <country code="KHE" name="Khentii"/>
-    <country code="KHD" name="Khovd"/>
-    <country code="KHS" name="Khövsgöl"/>
-    <country code="NLD" name="Nalaikh district (UB City)"/>
-    <country code="OMN" name="Ömnögovi"/>
-    <country code="ORK" name="Orkhon"/>
-    <country code="OVO" name="Övörkhangai"/>
-    <country code="SEL" name="Selenge"/>
-    <country code="SUK" name="Sükhbaatar"/>
-    <country code="SKD" name="Shükhbaatar district (UB City)"/>
-    <country code="SGD" name="Songinokhairkhan district (UB City)"/>
-    <country code="TOV" name="Töv"/>
-    <country code="UBC" name="Ulaanbaatar City"/>
-    <country code="UVS" name="Uvs"/>
-    <country code="ZAV" name="Zavkhan"/>
-</countries>
+<geoareas>
+    <geoarea code="CP" name="Central Province"/>
+    <geoarea code="SP" name="Simbu Province"/>
+    <geoarea code="EHP" name="Eastern Highlands Province"/>
+    <geoarea code="ENBP" name="East New Britain Province"/>
+    <geoarea code="ESP" name="East Sepik Province"/>
+    <geoarea code="EP" name="Enga Province"/>
+    <geoarea code="GP" name="Gulf Province"/>
+    <geoarea code="MadP" name="Madang Province"/>
+    <geoarea code="ManP" name="Manus Province"/>
+    <geoarea code="MBP" name="Milne Bay Province"/>
+    <geoarea code="MoP" name="Morobe Province"/>
+    <geoarea code="NIP" name="New Ireland Province"/>
+    <geoarea code="OP" name="Oro Province"/>
+    <geoarea code="ARB" name="Autonomous Region of Bougainville"/>
+    <geoarea code="SHP" name="Southern Highlands Province"/>
+    <geoarea code="WP" name="Western Province"/>
+    <geoarea code="WHP" name="Western Highlands Province"/>
+    <geoarea code="WNBP" name="West New BritainProvince"/>
+    <geoarea code="WSP" name="West Sepik Province"/>
+    <geoarea code="NCD" name="National Capital District"/>
+    <geoarea code="HP" name="Hela Province"/>
+    <geoarea code="JP" name="Jiwaka Province"/>
+</geoareas>
