New blog plugin for adding links on the right columns and on the "About" page. Attention!!! To activate this plugin, the table "plugin_settings" of the database shuold contain the 3 following entries. For each entry: plugin_name = "linksblockplugin" locale = "" journal_id="replaceByIDOfYourJournal". and then, first entry: setting_name="enabled" setting_value="1" setting_type="bool". Second entry: setting_name="context" setting_value="2" setting_type="int". Third entry: setting_name="seq", setting_value="2", setting_type="int"

--- a/lib/pkp/locale/en_US/common.xml
+++ b/lib/pkp/locale/en_US/common.xml
@@ -22,6 +22,7 @@
         <!-- February 6th 2014 -->
             
 	<message key="common.outside">Outside</message>
+	<message key="common.links">Link(s)</message>
         
         <!-- Old -->
             
