--- a/locale/en_US/manager.xml
+++ b/locale/en_US/manager.xml
@@ -38,6 +38,12 @@
         
 	<message key="manager.setup.itemsDescriptionModif">Links entered below will appear in the "About" page and, if the block has been made available, on the right column of this system.</message>
         
+        <message key="manager.setup.submission.postApproval">Post-approval actions</message>
+        <message key="manager.setup.submission.progressReport">Progress report</message>
+        <message key="manager.setup.submission.progressReport.instruct"><![CDATA[The text entered below will appear during the submission of a progress report by an investigator. Please enter information relative to this submission like policies or links to templates. We recommend you to specify that:<ul><li>The upload of the progress report will result in a new round of review to the committee(s) in charge of the research.</li><li>Only 1 (one) file can be uploaded.</li></ul>]]></message>
+        <message key="manager.setup.submission.completionReport">Completion report</message>
+        <message key="manager.setup.submission.completionReport.instruct"><![CDATA[The text entered below will appear during the submission of a completion report by an investigator. Please enter information relative to this submission like policies or links to templates. We recommend you to specify that:<ul><li>The upload of the completion report will result in a new round of review to the committee(s) in charge of the research.</li><li>Only 1 (one) file can be uploaded.</li><li>Once the completion report accepted by the committee(s), the research will be considered as completed.</li></ul>]]></message>
+
         <!-- /Added -->
         
         <!-- Changed -->
