--- a/classes/lib/tcpdf/CHANGELOG.TXT
+++ b/classes/lib/tcpdf/CHANGELOG.TXT
@@ -1,3 +1,57 @@
+6.0.067 (2014-04-21)
+	- startLayer() method signature was changed to include a new "lock" parameter.
+
+6.0.066 (2014-04-20)
+	- Bug #908 "Linebreak is not considered when getting length of the next string" was fixed.
+
+6.0.065 (2014-04-10)
+	- Bug #905 "RGB percentage color bug in convertHTMLColorToDec()" was fixed.
+
+6.0.064 (2014-04-07)
+	- Header and Footer fonts are now set by default.
+	- Bug #904 "PDF corrupted" was fixed.
+
+6.0.063 (2014-04-03)
+	- Method TCPDF_IMAGES::_parsepng() was fixed to support transparency in Indexed images.
+
+6.0.062 (2014-03-02)
+	- The method startLayer() now accepts the NULL value for the $print parameter to not set the print layer option.
+
+6.0.061 (2014-02-18)
+	- Bug #893 "Parsing error on streamed xref for secured pdf" was fixed.
+
+6.0.060 (2014-02-16)
+	- Bug #891 "Error on parsing hexa fields" was fixed.
+	- Bug #892 "Parsing pdf with trailing space at start" was fixed.
+
+6.0.059 (2014-02-03)
+	- SVG 'use' support was imporved.
+
+6.0.058 (2014-01-31)
+	- Bug #886 "Bugs with SVG using <defs> and <use>" was fixed.
+
+6.0.057 (2014-01-26)
+	- Bug #883 "Parsing error" was fixed.
+
+6.0.056 (2014-01-25)
+	- The automatic cache folder selection now works also with some restricted hosting environments.
+	- CSS text-transform property is now supported (requires the multibyte string library for php) - see examle n. 061 (Thanks to Walter Ferraz).
+	- Bug #884 "Parsing error prev tag looking for" was fixed.
+
+6.0.055 (2014-01-15)
+	- Bug #880 "Error detecting hX tags (h1,h2..)" was fixed
+	- Bug #879 "Thead on the second page inherits style of previous tr" was fixed
+
+6.0.054 (2014-01-13)
+	- Bug #877 "Parenteses causing corrupt text" was fixed.
+
+6.0.053 (2014-01-03)
+	- Bug #876 "Cell padding should not be multiplied with number of lines in getStringHeight" was fixed.
+	- Patch #68 "Empty img src attribute leads to access of uninitialized string offset" was applied.
+
+6.0.052 (2013-12-12)
+	- Bug #871 "Datamatrix coding" was fixed.
+
 6.0.051 (2013-12-02)
 	- cbbox array values in addTTFfont() were converted to integers.
 
